set video to loop, fixed phone pic alignment by moving it to it's own section, spacing still not right

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,9 +25,7 @@ a {
   font-size: 21px;
   color: gray;
 }
-#phone {
-  align-content: center;
-}
+
 #copyright {
   font-size: 21px;
   color: gray;
